// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Breadcrumbs ui default: Component: Breadcrumbs => ui => default 1`] = `
<div
  className="breadcrumb-wrapper"
>
  <Breadcrumb
    aria-label="breadcrumb"
    listTag="ol"
    tag="nav"
  >
    <BreadcrumbItem
      active={false}
      key="Dashboard"
      tag="li"
    >
      <NavLink
        exact={true}
        tag={[Function]}
        to="/dashboard"
      >
        Dashboard
      </NavLink>
    </BreadcrumbItem>
  </Breadcrumb>
</div>
`;

exports[`Component: Breadcrumbs ui with active: Component: Breadcrumbs => ui => with active 1`] = `
<div
  className="breadcrumb-wrapper"
>
  <Breadcrumb
    aria-label="breadcrumb"
    listTag="ol"
    tag="nav"
  >
    <BreadcrumbItem
      active={false}
      key="Dashboard"
      tag="li"
    >
      <NavLink
        exact={true}
        tag={[Function]}
        to="/dashboard"
      >
        Dashboard
      </NavLink>
    </BreadcrumbItem>
    <BreadcrumbItem
      active={true}
      key="Library"
      tag="li"
    >
      <span>
        Library
      </span>
    </BreadcrumbItem>
  </Breadcrumb>
</div>
`;
